apps/haproxy/manifests/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy
  labels:
    app.kubernetes.io/name: haproxy
    app.kubernetes.io/component: proxy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: haproxy
      app.kubernetes.io/component: proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: haproxy
        app.kubernetes.io/component: proxy
    spec:
      containers:
        - name: haproxy
          image: docker.io/library/haproxy:${PARAM_APP_IMAGE_TAG}
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: stats
              containerPort: 8936
              protocol: TCP
          volumeMounts:
            - name: haproxy-config
              mountPath: /usr/local/etc/haproxy/haproxy.cfg
              subPath: haproxy.cfg
              readOnly: true
          startupProbe:
            httpGet:
              path: /healthz
              port: stats
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: stats
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: stats
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: ${PARAM_HAPROXY_CPU_REQUEST}
              memory: ${PARAM_HAPROXY_MEMORY_REQUEST}
            limits:
              cpu: ${PARAM_HAPROXY_CPU_LIMIT}
              memory: ${PARAM_HAPROXY_MEMORY_LIMIT}
      volumes:
        - name: haproxy-config
          configMap:
            name: haproxy-config
