apps/haproxy/manifests/42-service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-http
  labels:
    app.kubernetes.io/name: haproxy
    app.kubernetes.io/component: proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: haproxy
    app.kubernetes.io/component: proxy
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
