apps/haproxy/manifests/43-service-stats-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy-stats-internal
  labels:
    app.kubernetes.io/name: haproxy
    app.kubernetes.io/component: proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: haproxy
    app.kubernetes.io/component: proxy
  ports:
    - name: stats
      port: 80
      targetPort: 8936
      protocol: TCP
